fix percentile range, show hist bootstrap SEs

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -1967,6 +1967,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.rcParams[\"font.size\"] = 19\n",
     "plt.rcParams[\"legend.fontsize\"] = 15\n",
     "\n",
     "plt.rcParams[\"xtick.major.size\"] = 7\n",
@@ -2339,23 +2340,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = general_path+\"graphs/other_plots/standard_error/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "112",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "repeats = 1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2386,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,14 +2385,14 @@
     "\n",
     "all_dicts = [\n",
     "#     MF.load_dic_from_json(filename=base_path+f\"1.5b2/0R2/-2l2/anicorr_4age7_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
-    "    MF.load_dic_from_json(filename=base_path+f\"3b6/0R2/-2l2/anicorr_4age7_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
+    "    MF.load_dic_from_json(filename=base_path+f\"3b6/0R3.5/-2l2/anicorr_4age7_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
     "    \n",
     "#     MF.load_dic_from_json(filename=base_path+f\"1.5b2/0R2/-2l2/anicorr_9.5age10_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
-    "    MF.load_dic_from_json(filename=base_path+f\"3b6/0R2/-2l2/anicorr_9.5age10_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
+    "    MF.load_dic_from_json(filename=base_path+f\"3b6/0R3.5/-2l2/anicorr_9.5age10_{repeats}repeats_50size5000_100stepsLog_sampleBootErrors.json\"),\n",
     "]\n",
     "\n",
     "colors = [\"blue\", \"red\"]\n",
-    "labels = [\"Young\", \"Old\"]\n",
+    "labels = [\"Young SE\", \"Old SE\"]\n",
     "\n",
     "for i,dic in enumerate(all_dicts):\n",
     "    dic[\"color\"] = colors[i]\n",
@@ -2414,7 +2405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2448,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2479,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2512,7 +2503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2528,20 +2519,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
     "max_sampling_size = max(sampling_sizes)\n",
-    "xtick_step = 500\n",
-    "major_locator = 1000\n",
-    "minor_locator = 250"
+    "# xtick_step = 500\n",
+    "# major_locator = 1000\n",
+    "# minor_locator = 250"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2560,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2626,14 +2617,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
     "# brokenaxes = True\n",
     "brokenaxes = False\n",
     "\n",
-    "MC_error_bool = brokenaxes and xlog_bool and ylog_bool\n",
+    "# MC_error_bool = brokenaxes and xlog_bool and ylog_bool\n",
+    "MC_error_bool = False\n",
+    "\n",
     "bootstrap_error_bool = brokenaxes\n",
     "\n",
     "figsize = (8,10) if brokenaxes else (10,10)\n",
@@ -2641,8 +2634,39 @@
     "    plt.rcParams[\"xtick.major.size\"] = 6\n",
     "    plt.rcParams[\"xtick.minor.size\"] = 3\n",
     "    plt.rcParams[\"ytick.major.size\"] = 6\n",
-    "    plt.rcParams[\"ytick.minor.size\"] = 3\n",
-    "plt.rcParams[\"font.size\"] = 19"
+    "    plt.rcParams[\"ytick.minor.size\"] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_sample_bootstrap_errors = True\n",
+    "# show_sample_bootstrap_errors = False\n",
+    "\n",
+    "if show_sample_bootstrap_errors:\n",
+    "    \n",
+    "    bootstrap_mean_label = \"Mean of bootstrap SE\"\n",
+    "    \n",
+    "    ### STD\n",
+    "#     show_nested_bootstrap_std = True; bootstrap_std_label = \"STD of bootstrap SE\"\n",
+    "    show_nested_bootstrap_std = False\n",
+    "\n",
+    "#     nested_bootstrap_symmetric = True\n",
+    "    nested_bootstrap_symmetric = False\n",
+    "\n",
+    "    ### PERCENTILE\n",
+    "    \n",
+    "    show_percentile_sample_bootstrap_errors_surface = True\n",
+    "#     show_percentile_sample_bootstrap_errors_surface = False\n",
+    "    \n",
+    "    percentile = 68; percentile_sample_bootstrap_error_surface_label = \"68% interval of bootstrap SE\"; filename_suffix_percentile_bootstrap = \"68q\"\n",
+    "    # percentile = 95; percentile_sample_bootstrap_error_surface_label = \"95% interval of bootstrap SE\"; filename_suffix_percentile_bootstrap = \"95q\"\n",
+    "    # percentile = 99.7; percentile_sample_bootstrap_error_surface_label = \"99.7% interval of bootstrap SE\"; filename_suffix_percentile_bootstrap = \"99.7q\"\n",
+    "    # percentile = 100; percentile_sample_bootstrap_error_surface_label = \"Full range of bootstrap SE\"; filename_suffix_percentile_bootstrap = \"100q\""
    ]
   },
   {
@@ -2652,31 +2676,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_sample_bootstrap_errors = True\n",
-    "# show_sample_bootstrap_errors = False\n",
-    "\n",
-    "show_percentile_sample_bootstrap_errors_surface = True\n",
-    "# show_percentile_sample_bootstrap_errors_surface = False\n",
-    "\n",
-    "# percentile = 95; percentile_sample_bootstrap_error_surface_label = \"2 STD of bootstrap errors\"; filename_suffix_percentile_bootstrap = \"2SD\"\n",
-    "percentile = 99.7; percentile_sample_bootstrap_error_surface_label = \"3 STD of bootstrap errors\"; filename_suffix_percentile_bootstrap = \"3SD\"\n",
-    "# percentile = 100; percentile_sample_bootstrap_error_surface_label = \"Full range of bootstrap errors\"; filename_suffix_percentile_bootstrap = \"Full\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "126",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "min_y = [0.001,0.001,0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2687,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2725,7 +2731,7 @@
     "        fig.delaxes(rax)\n",
     "    \n",
     "    if True: # plot\n",
-    "        for dic in all_dicts:\n",
+    "        for d,dic in enumerate(all_dicts):\n",
     "            lax.plot(sampling_sizes[sampling_sizes <= max_sampling_size],np.array(dic[func+\"_errors\"])[sampling_sizes <= max_sampling_size],\\\n",
     "                     label=dic[\"label\"] if row==0 else None,color=dic[\"color\"],alpha=dic[\"alpha\"],linestyle=dic[\"linestyle\"])\n",
     "            \n",
@@ -2733,28 +2739,37 @@
     "\n",
     "                mean_bootstrap_errors = np.mean(dic[func+\"_bootstrap_errors\"],axis=1)\n",
     "                \n",
-    "                std_low,std_high = np.zeros(shape=(len(sampling_sizes))),np.zeros(shape=(len(sampling_sizes)))\n",
+    "                if show_nested_bootstrap_std:\n",
+    "                    std_low,std_high = np.zeros(shape=(len(sampling_sizes))),np.zeros(shape=(len(sampling_sizes)))\n",
     "\n",
-    "                for i,mean in enumerate(mean_bootstrap_errors):\n",
-    "                    std_low[i],std_high[i] = error_helpers.compute_lowhigh_std(central_value=mean, values=dic[func+\"_bootstrap_errors\"][i])\n",
-    "                \n",
+    "                    for i,mean in enumerate(mean_bootstrap_errors):\n",
+    "                        std_low[i],std_high[i] = error_helpers.build_confidence_interval(central_value=mean, values=dic[func+\"_bootstrap_errors\"][i],\\\n",
+    "                                                                                        symmetric=nested_bootstrap_symmetric)\n",
+    "                    \n",
+    "                    lax.fill_between(x=sampling_sizes, y1=mean_bootstrap_errors-std_low, y2=mean_bootstrap_errors+std_high, color=dic[\"color\"], \\\n",
+    "                                 alpha=0.25, linewidth=0 if show_percentile_sample_bootstrap_errors_surface else None)\n",
+    "                    \n",
     "                if show_percentile_sample_bootstrap_errors_surface:\n",
+    "                    q_low = (100-percentile)/2\n",
+    "                    q_high = (100+percentile)/2 # this is the same as 100-q_low\n",
+    "                    \n",
     "                    lax.fill_between(x=sampling_sizes, \\\n",
-    "                                     y1=np.percentile(dic[func+\"_bootstrap_errors\"],axis=1, q=100-percentile),\\\n",
-    "                                     y2=np.percentile(dic[func+\"_bootstrap_errors\"],axis=1, q=percentile),\\\n",
-    "                                     color=dic[\"color\"], alpha=0.1)#,linewidth=0)                                     \n",
+    "                                     y1=np.percentile(dic[func+\"_bootstrap_errors\"],axis=1, q=q_low),\\\n",
+    "                                     y2=np.percentile(dic[func+\"_bootstrap_errors\"],axis=1, q=q_high),\\\n",
+    "                                     color=dic[\"color\"], alpha=0.1 if show_nested_bootstrap_std else 0.25)\n",
     "\n",
-    "                lax.fill_between(x=sampling_sizes, y1=mean_bootstrap_errors-std_low, y2=mean_bootstrap_errors+std_high, color=dic[\"color\"], \\\n",
-    "                                 alpha=0.25)#, linewidth=0)\n",
-    "                lax.plot(sampling_sizes, np.mean(dic[func+\"_bootstrap_errors\"],axis=1),color=dic[\"color\"],linestyle=\"--\")\n",
+    "                lax.plot(sampling_sizes, mean_bootstrap_errors, color=dic[\"color\"], linestyle=\"--\")\n",
     "        \n",
     "        if show_sample_bootstrap_errors and row==0: # just for legend labels\n",
     "            labely = np.mean(dic[\"anisotropy_errors\"])\n",
-    "            lax.plot([-2,-1],[labely,labely],color=\"k\",linestyle=\"--\",label=\"Mean bootstrap error\")\n",
-    "            lax.fill_between(x=[-2,-1],y1=[labely,labely],y2=[labely,labely],color=\"k\",alpha=0.25,label=\"STD of bootstrap errors\")\n",
+    "            lax.plot([-2,-1],[labely,labely],color=\"k\",linestyle=\"--\",label=bootstrap_mean_label)\n",
+    "            \n",
+    "            if show_nested_bootstrap_std:\n",
+    "                lax.fill_between(x=[-2,-1],y1=[labely,labely],y2=[labely,labely],color=\"k\",alpha=0.25,label=bootstrap_std_label)\n",
     "            \n",
     "            if show_percentile_sample_bootstrap_errors_surface:\n",
-    "                lax.fill_between(x=[-2,-1],y1=[labely,labely],y2=[labely,labely],color=\"k\",alpha=0.1,label=percentile_sample_bootstrap_error_surface_label)\n",
+    "                lax.fill_between(x=[-2,-1],y1=[labely,labely],y2=[labely,labely],color=\"k\",alpha=0.1 if show_nested_bootstrap_std else 0.25,\\\n",
+    "                                 label=percentile_sample_bootstrap_error_surface_label)\n",
     "                    \n",
     "        if brokenaxes:\n",
     "            for dic,ax in zip(all_dicts,[cax,rax]):\n",
@@ -2867,10 +2882,10 @@
     "            if brokenaxes:\n",
     "                fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7),framealpha=0 if xlog_bool and ylog_bool else 1)\n",
     "            else:\n",
-    "                lax.legend(loc=\"upper right\" if not ylog_bool else \"lower left\")\n",
+    "                lax.legend(loc=\"upper right\" if not ylog_bool else \"lower left\", framealpha=0.5)\n",
     "        elif row == 1:\n",
     "            if show_true_pearson_standard_error and func == \"correlation\":\n",
-    "                lax.legend(loc=\"lower left\" if xlog_bool and ylog_bool else \"upper right\")\n",
+    "                lax.legend(loc=\"lower left\" if xlog_bool and ylog_bool else \"upper right\", framealpha=0.5)\n",
     "                \n",
     "        lax.set_ylabel(r\"Standard error %s\"%((r\"$[$\" + mapf.get_units(func) + r\"$]$\") if mapf.get_units(func) != \"\" else \"\"))\n",
     "        \n",
@@ -2917,16 +2932,21 @@
     "    else:\n",
     "        filename += \"_noFit\"\n",
     "        \n",
-    "    if show_sample_bootstrap_errors:\n",
-    "        filename += \"_sampleBootErrors\"\n",
+    "    if not show_sample_bootstrap_errors:\n",
+    "        filename += \"_noBoot\"\n",
+    "    else:\n",
     "        \n",
-    "        if not show_percentile_sample_bootstrap_errors_surface:\n",
-    "            filename += filename_suffix_percentile_bootstrap\n",
+    "        if show_nested_bootstrap_std:\n",
+    "            filename += \"_bootSTD\"\n",
+    "        \n",
+    "        if show_percentile_sample_bootstrap_errors_surface:\n",
+    "            filename += \"_boot\"+filename_suffix_percentile_bootstrap\n",
     "        \n",
     "    if brokenaxes:\n",
     "        filename += \"_broken\"\n",
-    "        if not MC_error_bool:\n",
-    "            filename += \"_noMC\"\n",
+    "        \n",
+    "        if MC_error_bool:\n",
+    "            filename += \"_MC\"\n",
     "        \n",
     "    print(filename)\n",
     "    \n",
@@ -2939,7 +2959,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_size_indices = np.array([0,len(sampling_sizes)//2,-1])\n",
+    "\n",
+    "nrows = len(function_dict)\n",
+    "\n",
+    "fig,axs = plt.subplots(figsize=(20,15),ncols=len(sample_size_indices),nrows=nrows,gridspec_kw={\"hspace\":0.3})#,\"wspace\":0},)\n",
+    "\n",
+    "for row,func in enumerate(function_dict):\n",
+    "    row_axs = axs[row]\n",
+    "    \n",
+    "    for col,(ax,sample_idx) in enumerate(zip(row_axs,sample_size_indices)):\n",
+    "        \n",
+    "        for d,dic in enumerate(all_dicts):\n",
+    "            \n",
+    "            ax.hist(dic[func+\"_bootstrap_errors\"][sample_idx], color=dic[\"color\"],bins=50, label=[\"Young\",\"Old\"][d],alpha=0.5)#alpha=dic[\"alpha\"])\n",
+    "            \n",
+    "            ax.axvline(np.mean(dic[func+\"_bootstrap_errors\"][sample_idx]), color=dic[\"color\"])\n",
+    "            ax.axvline(dic[func+\"_errors\"][sample_idx], color=[\"cyan\",\"orange\"][d],linestyle=\"dotted\",lw=2)\n",
+    "        \n",
+    "        ax.axvline(x=np.mean(dic[func+\"_bootstrap_errors\"][sample_idx]),ymin=0,ymax=0,color=\"k\",label=\"Mean\")\n",
+    "        ax.axvline(x=np.mean(dic[func+\"_bootstrap_errors\"][sample_idx]),ymin=0,ymax=0,color=\"k\",linestyle=\"dotted\",lw=2,label=\"Actual SE\")\n",
+    "        \n",
+    "        if True: # title, labels\n",
+    "            if row == 0:\n",
+    "                ax.set_title(f\"Sample size {sampling_sizes[sample_idx]}\")\n",
+    "            \n",
+    "            if col == 0:\n",
+    "                ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
+    "            ax.set_xlabel([\"Anisotropy bootstrap SE\",\"Correlation bootstrap SE\",r\"Vertex deviation bootstrap SE $[^\\circ]$\"][row])\n",
+    "                \n",
+    "            if row == len(function_dict)//2 and col == len(sample_size_indices)//2: # center\n",
+    "                ax.legend()\n",
+    "#             if row == 0 and col == 0:\n",
+    "#                 ax.legend()\n",
+    "            pass\n",
+    "            \n",
+    "if True: # filename and save\n",
+    "    all_spatial_cuts = [dic[\"spatial_cuts\"] for dic in all_dicts]\n",
+    "    save_path = get_save_path_spatial_cuts(base_path=base_path,spatial_cuts=all_spatial_cuts)\n",
+    "    \n",
+    "    filename = \"bootstrapErrorHists\"\n",
+    "    \n",
+    "    if list(function_dict.keys()) == [\"anisotropy\",\"correlation\",\"tilt_abs\"]:\n",
+    "        filename += \"_anicorr\"\n",
+    "    else:\n",
+    "        raise ValueError(\"Please specify map list name\")\n",
+    "\n",
+    "    pop_str = MF.extract_str_from_cuts_dict(all_dicts[0][\"pop_cuts\"])\n",
+    "    filename += \"_\"+pop_str\n",
+    "    for dic in all_dicts[1:]:\n",
+    "        if MF.extract_str_from_cuts_dict(dic[\"pop_cuts\"]) not in filename:\n",
+    "            filename += '_'+MF.extract_str_from_cuts_dict(dic[\"pop_cuts\"])\n",
+    "\n",
+    "    filename += f\"_{repeats}repeats\"\n",
+    "    filename += \"_\" + str.join(\",\",sampling_sizes[sample_size_indices].astype(str))\n",
+    "        \n",
+    "    print(filename)\n",
+    "    \n",
+    "    if save_bool:\n",
+    "        print(\"Saving in\",save_path)\n",
+    "        plt.savefig(save_path+filename+\".png\",dpi=200,bbox_inches=\"tight\")\n",
+    "        \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": []
