different repeats for sampling and bootstrapping

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -1723,17 +1723,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_sampling_arrays(save_path, filename, func_name, res, recursive=False, verbose=True):\n",
-    "    np.save(save_path+filename+f\"_{func_name}_CIs\", res.confidence_intervals)        \n",
-    "    np.save(save_path+filename+f\"_{func_name}_SEs\", res.standard_errors)        \n",
-    "    np.save(save_path+filename+f\"_{func_name}_biases\", res.biases)\n",
+    "def save_sampling_arrays(save_path, base_filename, func_name, res, recursive=False, verbose=True):\n",
+    "    np.save(save_path+base_filename+f\"_{func_name}_CIs\", res.confidence_intervals)        \n",
+    "    np.save(save_path+base_filename+f\"_{func_name}_SEs\", res.standard_errors)        \n",
+    "    np.save(save_path+base_filename+f\"_{func_name}_biases\", res.biases)\n",
     "    \n",
     "    if recursive:\n",
-    "        np.save(save_path+filename+f\"_{func_name}_nestedCIs\", res.nested_confidence_intervals)            \n",
-    "        np.save(save_path+filename+f\"_{func_name}_nestedSEs\", res.nested_standard_errors)            \n",
-    "        np.save(save_path+filename+f\"_{func_name}_nestedbiases\", res.nested_biases)    \n",
+    "        np.save(save_path+base_filename+f\"_{func_name}_nestedCIs\", res.nested_confidence_intervals)            \n",
+    "        np.save(save_path+base_filename+f\"_{func_name}_nestedSEs\", res.nested_standard_errors)            \n",
+    "        np.save(save_path+base_filename+f\"_{func_name}_nestedbiases\", res.nested_biases)    \n",
     "    else:\n",
-    "        np.save(save_path+filename+f\"_{func_name}_distributions\", res.bootstrap_distributions)"
+    "        np.save(save_path+base_filename+f\"_{func_name}_distributions\", res.bootstrap_distributions)"
    ]
   },
   {
@@ -1743,7 +1743,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repeats = 5000"
+    "sampling_repeats = 5000\n",
+    "bootstrap_repeats = 500"
    ]
   },
   {
@@ -1776,8 +1777,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_config = BootstrapConfig(repeats=repeats,symmetric=False,replace=True)\n",
-    "bootstrap_config = BootstrapConfig(repeats=repeats,symmetric=False,replace=True)\n",
+    "sampling_config = BootstrapConfig(repeats=sampling_repeats,symmetric=False,replace=True)\n",
+    "bootstrap_config = BootstrapConfig(repeats=bootstrap_repeats,symmetric=False,replace=True)\n",
     "\n",
     "bootstrap_vectorised = True\n",
     "# bootstrap_vectorised = False\n",
@@ -1862,15 +1863,15 @@
     "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "\n",
     "#     },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\": [4,7]}\n",
-    "    },\n",
     "#     {\n",
     "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
-    "\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]}\n",
     "#     },\n",
+    "    {\n",
+    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "        \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "\n",
+    "    },\n",
     "#     {\n",
     "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
     "#         \"pop_cuts\": {\"age\": [4,7]},\n",
@@ -1917,21 +1918,19 @@
     "        save_path += \"arrays/\"\n",
     "        MF.create_dir(save_path)\n",
     "        \n",
-    "        save_path += f\"{repeats}repeats/\"\n",
+    "        save_path += f\"sampling{sampling_repeats}repeats/\"\n",
+    "        MF.create_dir(save_path)\n",
+    "        \n",
+    "        save_path += f\"bootstrap{bootstrap_repeats}repeats/\"\n",
     "        MF.create_dir(save_path)\n",
     "        \n",
     "        save_path += MF.extract_str_from_cuts_dict(dic[\"pop_cuts\"]) + \"/\"\n",
     "        MF.create_dir(save_path)\n",
     "        \n",
-    "        if list(function_dict.keys()) == [\"anisotropy\",\"correlation\",\"tilt_abs\"]:\n",
-    "            filename = \"anicorr\"\n",
-    "        else:\n",
-    "            raise ValueError(\"Please specify map list name\")\n",
+    "        base_filename = f\"{min(sampling_sizes)}size{max(sampling_sizes)}\"\n",
+    "        base_filename += f\"_{len(sampling_sizes)}steps\" + (\"Log\" if logSampling else \"\")\n",
     "\n",
-    "        filename += f\"_{min(sampling_sizes)}size{max(sampling_sizes)}\"\n",
-    "        filename += f\"_{len(sampling_sizes)}steps\" + (\"Log\" if logSampling else \"\")\n",
-    "\n",
-    "        print(\"General filename:\",filename)\n",
+    "        print(\"General filename:\",base_filename)\n",
     "        print(\"Saving in\",save_path,\"\\n\")\n",
     "    \n",
     "    for func in function_dict:\n",
@@ -1942,10 +1941,10 @@
     "                                                              vectorised=bootstrap_vectorised, batch_size=batch_size,\\\n",
     "                                                              config=sampling_config, nested_config=bootstrap_config)\n",
     "        else:\n",
-    "            res = bootstrap_multiple_sampling_sizes(df=df,function=function_dict[func],repeat=repeats,sampling_sizes=sampling_sizes,\\\n",
+    "            res = bootstrap_multiple_sampling_sizes(df=df,function=function_dict[func],sampling_sizes=sampling_sizes,\\\n",
     "                                                    config=sampling_config, vectorised=bootstrap_vectorised, batch_size=batch_size)\n",
     "        \n",
-    "        if save_bool: save_sampling_arrays(save_path=save_path, func_name=func,filename=filename, res=res, recursive=save_bootstrap_errors)\n",
+    "        save_sampling_arrays(save_path=save_path, func_name=func,base_filename=base_filename, res=res, recursive=save_bootstrap_errors)\n",
     "        \n",
     "        print(\"Arrays saved successfully.\\n\")\n",
     "    \n",
