remove chunk loading

--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import load_sim"
+    "import utils.load_sim as load_sim"
    ]
   },
   {
@@ -451,6 +451,15 @@
     "np_path = general_path+f\"data/{sim_choice}/numpy_arrays/\"\n",
     "        \n",
     "df0 = load_sim.load_simulation(path=np_path,filename=filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MF.apply_cuts_to_df(df0, cuts_dict={\"l\":[-15,15], \"b\":[0,15], \"d\":[5,11]})"
    ]
   },
   {
