--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -239,16 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_chunk = False\n",
-    "\n",
-    "if not load_chunk:\n",
-    "    np_path = general_path+f\"data/{sim_choice}/numpy_arrays/\"\n",
+    "np_path = general_path+f\"data/{sim_choice}/numpy_arrays/\"\n",
     "        \n",
-    "    df0 = load_sim.load_simulation(path=np_path,filename=filename)\n",
-    "else:\n",
-    "    if sim_choice == \"708main\" and rot_angle == 27 and not axisymmetric and zabs and sim_scaling == 1.7:\n",
-    "        pickle_name = \"df_bulge_zabs.pkl\"\n",
-    "        df0 = pd.read_pickle(\"708main_simulation/\"+pickle_name)"
+    "df0 = load_sim.load_simulation(path=np_path,filename=filename)"
    ]
   },
   {
