clean velocity plot from maps

--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -205,203 +205,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualisation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_path = general_path+\"708main_simulation/graphs/Observations/Apogee/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Velocity plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel_lim = 400\n",
-    "lmax = 2\n",
-    "longitude_string = str(-lmax)+'l'+str(lmax)+'/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bulge_data = data[(data['b']<10)&(data['d']>6)&(data['d']<10)&(np.abs(data['l'])<10)]\n",
-    "low_vel_data = bulge_data[(np.abs(bulge_data['vr'])<vel_lim)&(np.abs(bulge_data['vl'])<vel_lim)]\n",
-    "long_cut_data = low_vel_data[np.abs(low_vel_data['l'])<lmax]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LOOP OVER METALLICITY IN STEPS\n",
-    "\n",
-    "step = 0.1\n",
-    "\n",
-    "low_metal = -1\n",
-    "high_metal = 0\n",
-    "\n",
-    "# low_metal = -0.3\n",
-    "# high_metal = 0.5\n",
-    "\n",
-    "metal_cut = np.arange(low_metal, high_metal + step, step)\n",
-    "x_vel_list,y_vel_list = [],[]\n",
-    "\n",
-    "old = True\n",
-    "# old = False\n",
-    "\n",
-    "for cut in metal_cut:\n",
-    "    metal_data = long_cut_data[long_cut_data['FeH']<cut] if old else long_cut_data[long_cut_data['FeH']>cut]\n",
-    "    x_vel_list.append(metal_data.vr.values)\n",
-    "    y_vel_list.append(metal_data.vl.values)\n",
-    "    \n",
-    "save_path_data = save_path+'vel_plots/'+longitude_string+'all_metal/'\n",
-    "MF.create_dir(save_path_data)\n",
-    "\n",
-    "for i,(vx,vy,cut) in enumerate(zip(x_vel_list,y_vel_list,metal_cut)):\n",
-    "    velocity_plot.velocity_plot(vx,vy,contour_levels=8,save_path=save_path_data,population_string='less' if old else 'more'+str(np.float16(cut)),\n",
-    "                                show=False,save=True,bootstrap_repeat=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# APOGEE poor, intermediate, rich\n",
-    "\n",
-    "poor_lim,rich_lim = -0.6, -0.2\n",
-    "\n",
-    "metal_string = f\"{poor_lim}_{rich_lim}/\"\n",
-    "poor_string = f'[FeH]{poor_lim}'\n",
-    "inter_string = f'{poor_lim}[FeH]{rich_lim}'\n",
-    "rich_string = f'{rich_lim}[FeH]'\n",
-    "\n",
-    "save_path_pops = save_path+\"vel_plots/\"+longitude_string+metal_string\n",
-    "MF.create_dir(save_path_pops)\n",
-    "\n",
-    "poor_data = long_cut_data[long_cut_data['FeH']<poor_lim]\n",
-    "intermediate_data = long_cut_data[(long_cut_data['FeH']>poor_lim)&(long_cut_data['FeH']<rich_lim)]\n",
-    "rich_data = long_cut_data[long_cut_data['FeH']>rich_lim]\n",
-    "\n",
-    "for i,(dataframe,pop) in enumerate(zip([poor_data,intermediate_data,rich_data], [\"poor\",\"intermediate\",\"rich\"])):\n",
-    "    \n",
-    "    vx,vy = dataframe.vr.values,dataframe.vl.values\n",
-    "    velocity_plot.velocity_plot(vx,vy,contour_levels=8,save_path=save_path_pops,population_string=str(i+1)+'_'+pop,\n",
-    "                                    show=False,save=True,bootstrap_repeat=100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel_lim = 400"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_bulge = df0[(df0['b']<10)&(np.abs(df0['l'])<10)&(df0['d']<10)&(df0['d']>6)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BW\n",
-    "BW = df_bulge[(df_bulge['age']>9.98)&(df_bulge['l']<-0.5)&(df_bulge['l']>-1.5)&(df_bulge['b']>3.5)&(df_bulge['b']<4.5)]\n",
-    "\n",
-    "velocity_plot.velocity_plot(BW.vr.values,BW.vl.values,contour_levels=8,save_path=save_path+'vel_plots/'+'BW/',population_string=age_string,\n",
-    "                                    show=True,save=True,bootstrap_repeat=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lmax = 2\n",
-    "longitude_string = str(-lmax)+'l'+str(lmax)+'/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_long = df_bulge[(np.abs(df_bulge['l'])<lmax)&(np.abs(df_bulge['vr'])<vel_lim)&(np.abs(df_bulge['vl'])<vel_lim)]\n",
-    "\n",
-    "# bmin = 3.5\n",
-    "# bmax = 10\n",
-    "bmin = 1.5\n",
-    "bmax = 3.5\n",
-    "lat_string = f'_{bmin}b{bmax}'\n",
-    "\n",
-    "df_lat = df_long[(df_long['b']>bmin)&(df_long['b']<bmax)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "age_max = 9.97\n",
-    "df_age = df_lat[df_lat['age']>age_max]\n",
-    "age_string = f'{age_max}age'\n",
-    "\n",
-    "vx,vy = df_age.vr.values,df_age.vl.values\n",
-    "\n",
-    "velocity_plot.velocity_plot(vx,vy,contour_levels=8,save_path=save_path+'vel_plots/'+longitude_string,population_string=age_string+lat_string,\n",
-    "                                    show=True,save=True,bootstrap_repeat=100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Map stuff"
    ]
   },
@@ -677,15 +480,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "min_angle = 3\n",
-    "max_angle = \n",
-    "6*np.tan(np.radians(min_angle)), 6*np.tan(np.radians(max_angle)), 10*np.tan(np.radians(min_angle)), 10*np.tan(np.radians(max_angle))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -715,7 +509,16 @@
     "if data_bool:\n",
     "    o_min_star_number = 50\n",
     "    \n",
-    "bootstrap_repeat = 500"
+    "bootstrap_repeat = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapf.get_kinematic_units_dict?"
    ]
   },
   {
@@ -729,7 +532,24 @@
     "                                                         vel_x_variable=vel_x_variable,\n",
     "                                                         vel_y_variable=vel_y_variable)\n",
     "\n",
-    "kinematic_units_dict = mapf.get_kinematic_units_dict(position_variables=x_variable+y_variable,\n",
+    "units_dict = mapf.get_kinematic_units_dict(degree_symbol=degree_symbol)\n",
+    "\n",
+    "pos_symbols_dict,pos_units_dict = mapf.get_position_symbols_and_units_dict(degree_symbol=r\"$%s$\"%degree_symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinematic_symbols_dict = mapf.get_kinematic_symbols_dict(x_variable=x_variable,\n",
+    "                                                         y_variable=y_variable,\n",
+    "                                                         vel_x_variable=vel_x_variable,\n",
+    "                                                         vel_y_variable=vel_y_variable)\n",
+    "\n",
+    "kinematic_units_dict = mapf.get_kinematic_units_dict(\n",
+    "    position_variables=x_variable+y_variable,\n",
     "                                                     vel_x_variable=vel_x_variable,\n",
     "                                                     vel_y_variable=vel_y_variable)"
    ]
