--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -292,7 +292,7 @@
     "        if montecarloconfig is None:\n",
     "            raise ValueError(f\"montecarloconfig was None but it needs to be specified when working with MC errors.\")\n",
     "        \n",
-    "        save_path += f\"MC_perturbed_{str.join(\",\",montecarloconfig.perturbed_vars)}/\"\n",
+    "        save_path += f\"MC_perturbed_{str.join(',',montecarloconfig.perturbed_vars)}/\"\n",
     "        MF.create_dir(save_path)\n",
     "        \n",
     "        if montecarloconfig.error_frac is not None:\n",
